2014-09-29  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (exec_omp_get): Default to GET_SYSTEM_REPORTS before
	GET_MY_SETTINGS, because this is convenient for the Monitor role.

2014-09-29  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/classic/omp.xsl (full-report-export-form)
	(filtered-report-export-form): Add timezone to download form.

	* src/gsad_omp.c (get_report): Add timezone to GET_REPORTS request.

2014-09-29  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Add charts to the Tasks page.

	* src/html/classic/graphics.xsl (js-scan-management-top-visualization):
	New template.

	* src/html/classic/omp.xsl (html-tasks-table): Add visualization.

2014-09-26  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/classic/help.xsl (tasks.html): Correct schedule example.

2014-09-25  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/classic/help.xsl (tasks.html): Note the extra filtering terms
	"schedule" and "next_due".

2014-09-25  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Add second line to line charts so the NVTs chart shows both the new
	NVTs per time step and the cumulative amount.

	* src/html/classic/js/gsa_line_chart.js (LineChartGenerator): Increase
	right margin size. Add variables for second y axis. Make line generator
	test if y fields are defined.
	(time_line): Add parameters aggregate2, fill, fill2. Return empty data
	array if original was empty. Get data for second y axis and fill in
	missing values according to fill and fill2.
	(generate): Add second line and y axis. Handle missing values and data
	arrays containing only one point.

2014-09-25  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Process charts request parameter for all http get requests, not just
	OMP get commands.

	* src/gsad_omp.c (get_many): Do not set the charts setting here.

	* src/gsad.c (exec_omp_get): Try to get charts parameter and update
	setting accordingly.

2014-09-25  Timo Pollmeier <timo.pollmeier@greenbone.net>